[gd_scene load_steps=4 format=3 uid="uid://wenslmmmc8g2"]

[ext_resource type="PackedScene" uid="uid://c2ht6vn6wolmv" path="res://ui/shared/general_menu_button/general_menu_button.tscn" id="1_5x3um"]
[ext_resource type="Script" uid="uid://cq7hh1u7qpl4n" path="res://overworld_new/set_seed/set_seed.gd" id="1_hchmv"]
[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="1_njtqx"]

[node name="SetSeed" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_njtqx")
script = ExtResource("1_hchmv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.5
offset_top = -57.0
offset_right = 125.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SeedInitializeContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="RandomSeedButton" parent="PanelContainer/MarginContainer/SeedInitializeContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "Random Seed"

[node name="SetSeedButton" parent="PanelContainer/MarginContainer/SeedInitializeContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "Set Seed"

[node name="SetSeedContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="UpperValueContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/SetSeedContainer"]
layout_mode = 2

[node name="EnterSeedLabel" type="Label" parent="PanelContainer/MarginContainer/SetSeedContainer/UpperValueContainer"]
layout_mode = 2
text = "Enter Seed:"

[node name="SeedValueLabel" type="Label" parent="PanelContainer/MarginContainer/SetSeedContainer/UpperValueContainer"]
layout_mode = 2

[node name="KeyboardValueContainer" type="GridContainer" parent="PanelContainer/MarginContainer/SetSeedContainer"]
layout_mode = 2
columns = 11

[node name="Button1" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "1"

[node name="Button2" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "2"

[node name="Button3" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "3"

[node name="Button4" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "4"

[node name="Button5" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "5"

[node name="Button6" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "6"

[node name="Button7" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "7"

[node name="Button8" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "8"

[node name="Button9" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "9"

[node name="Button10" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "0"

[node name="BackspaceButton" parent="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "<-"

[node name="ConfirmSeedButton" parent="PanelContainer/MarginContainer/SetSeedContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "Confirm"

[node name="ReturnButton" parent="PanelContainer/MarginContainer/SetSeedContainer" instance=ExtResource("1_5x3um")]
layout_mode = 2
text = "Return"

[connection signal="pressed" from="PanelContainer/MarginContainer/SeedInitializeContainer/RandomSeedButton" to="." method="_on_random_seed_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SeedInitializeContainer/SetSeedButton" to="." method="_on_set_seed_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button1" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button2" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button3" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button4" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button5" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button6" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button7" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button8" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button9" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/Button10" to="." method="add_self_to_seed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/KeyboardValueContainer/BackspaceButton" to="." method="_on_backspace_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/ConfirmSeedButton" to="." method="_on_confirm_seed_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/SetSeedContainer/ReturnButton" to="." method="_on_return_button_pressed"]
